--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.11",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "postcss": "8.4.23",
